# height_map

./: .clang-format  .gitignore
height_mapping_core/: CMakeLists.txt
height_mapping_core/src/: FastHeightFilter.cpp  HeightMap.cpp
height_mapping_data_collection/: CMakeLists.txt
height_mapping_data_collection/api/: heightmap.py  ros_visualize_heightmap.py  test.py  visualizer.py
height_mapping_data_collection/config/: visualization.yaml
height_mapping_data_collection/io/: laserscan.py
height_mapping_data_collection/src/: KITTIMapWriter.cpp  KITTIScanReader.cpp  (+1 more)
height_mapping_io/: CMakeLists.txt
height_mapping_ros/: CMakeLists.txt
height_mapping_ros/config/: height_mapping_params.yaml  params.yaml
height_mapping_ros/include/height_mapping_ros/: GlobalMapping.h  GlobalMappingNode.h  HeightMapping.h  HeightMappingNode.h
height_mapping_ros/include/height_mapping_ros/core/: GlobalMapper.h  HeightMapper.h  Preprocessor.h
height_mapping_ros/include/height_mapping_ros/nodes/: config_loader.h  global_mapping_node.h  height_mapping_node.h  sensor_processor_node.h
height_mapping_ros/include/height_mapping_ros/utils/: TransformHandler.h  config_loader.h  pc_utils.h
height_mapping_ros/launch/: global_mapping.launch  height_mapping.launch  mapping.launch
height_mapping_ros/src/core/: GlobalMapper.cpp  GlobalMapping.cpp  HeightMapper.cpp
height_mapping_ros/src/global_mapping/: GlobalMappingNode.cpp
height_mapping_ros/src/height_mapping/: HeightMappingNode.cpp
height_mapping_ros/src/nodes/: global_mapping_node.cpp  height_mapping_node.cpp  sensor_processor_node.cpp
(+12 files in other folders)
